[gd_scene load_steps=20 format=3 uid="uid://b48qqc1xa2nfc"]

[ext_resource type="Script" path="res://actors/player/player.gd" id="1_i3lif"]
[ext_resource type="Resource" uid="uid://dv7nhd224de5x" path="res://actors/player/player_laser_projectile.tres" id="3_pmrgw"]
[ext_resource type="Texture2D" uid="uid://dj2ef3dcmjtaq" path="res://actors/player/images/player.png" id="3_uhwhb"]
[ext_resource type="Texture2D" uid="uid://8ohlarcljj6o" path="res://actors/player/images/player_death.png" id="4_5sgur"]
[ext_resource type="AudioStream" uid="uid://d0agu4nks473p" path="res://actors/common/audio/explosion.wav" id="5_n2rcg"]
[ext_resource type="AudioStream" uid="uid://dex28mvwg50ka" path="res://actors/player/audio/player_shot.wav" id="5_qfu3m"]
[ext_resource type="Script" path="res://core/components/projectile_spawner_component.gd" id="7_fopvy"]
[ext_resource type="Script" path="res://core/components/health_component.gd" id="7_ub55h"]
[ext_resource type="PackedScene" uid="uid://n587cr1psc8b" path="res://core/components/attack_component.tscn" id="9_kldy5"]
[ext_resource type="Script" path="res://core/components/position_clamp_component.gd" id="10_3noaj"]
[ext_resource type="PackedScene" uid="uid://d3sdsrfyov5lw" path="res://core/components/hurt_component.tscn" id="11_ivhl6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c47dl"]
radius = 22.0
height = 74.0

[sub_resource type="Animation" id="Animation_ptute"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s0jlp"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 19]
}

[sub_resource type="Animation" id="Animation_b5f5y"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_18c3i"]
resource_name = "tilt_center"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_x0fgm"]
resource_name = "tilt_left"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.0872665]
}

[sub_resource type="Animation" id="Animation_8rc13"]
resource_name = "tilt_right"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_es6te"]
_data = {
"RESET": SubResource("Animation_ptute"),
"attack": SubResource("Animation_s0jlp"),
"death": SubResource("Animation_b5f5y"),
"tilt_center": SubResource("Animation_18c3i"),
"tilt_left": SubResource("Animation_x0fgm"),
"tilt_right": SubResource("Animation_8rc13")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 22
script = ExtResource("1_i3lif")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_uhwhb")
hframes = 5
vframes = 4

[node name="DeathSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_5sgur")
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_c47dl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_es6te")
}

[node name="MuzzleMarker" type="Marker2D" parent="."]
position = Vector2(0, -48)

[node name="Audio" type="Node2D" parent="."]

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("5_qfu3m")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("5_n2rcg")

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("7_ub55h")

[node name="ProjectileSpawnerComponent" type="Node" parent="Components"]
script = ExtResource("7_fopvy")
_projectile_data = ExtResource("3_pmrgw")

[node name="AttackComponent" parent="Components" node_paths=PackedStringArray("_animation_player", "_attack_sound", "_projectile_spawner_component") instance=ExtResource("9_kldy5")]
_animation_player = NodePath("../../AnimationPlayer")
_attack_sound = NodePath("../../Audio/AttackSound")
_projectile_spawner_component = NodePath("../ProjectileSpawnerComponent")

[node name="PositionClampComponent" type="Node" parent="Components" node_paths=PackedStringArray("actor")]
script = ExtResource("10_3noaj")
actor = NodePath("../..")
margin = 25.0

[node name="HurtComponent" parent="Components" node_paths=PackedStringArray("_health_component", "_collision_shape", "_death_animation_player", "_death_sound") instance=ExtResource("11_ivhl6")]
_health_component = NodePath("../HealthComponent")
_collision_shape = NodePath("../../CollisionShape2D")
_death_animation_player = NodePath("../../AnimationPlayer")
_death_sound = NodePath("../../Audio/DeathSound")

[node name="InvulnerabilityTimer" type="Timer" parent="."]

[connection signal="died" from="Components/HealthComponent" to="." method="_on_died"]
[connection signal="death_finished" from="Components/HurtComponent" to="." method="_on_death_finished"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
